# ka-lite

./: .KALITE_SOURCE_DIR  .coveragerc  .coveralls.yml  .gitignore  .gitmodules  .jshintignore  .jshintrc  .travis.yml  76d27657bc6e7717c7966290a61cdf0ed8e9b3ad-homepage.csv  CONTRIBUTING.md  Caching.md  DEPRECATIONS_0.13.rst  Dockerfile  FRONTEND.md  Gruntfile.js  INSTALL.md  LICENSE  MANIFEST.in  MANIFEST.in.dist  Makefile  PACKAGING.md  PTAK.md  README.md  README.rst  SUPPORT.rst  Vagrantfile  api_models.py  api_models_test.py  benchmark.py  benchmarkclient.py  benchmarkserver.py  build.js  build_less.sh  circle.yml  compile_javascript.js  date-save-kalite-data.sh  dev_requirements.txt  docopt_test.py  file_test.sh  importing.py  (+41 more)
.buildkite/: build_and_upload_artifact.sh  build_debian.sh  build_pex.sh  build_windows_installer.sh  pipeline.yml  setup_and_upload_artifacts.sh  upload_artifacts.py
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
backup/: __init__.py
content/: note.txt
data/: narratives.yml  version.yml
django_utils/: command.py
docker/: __init__.py  docker.py
docs/: BIG-IDEAS-DEMO.md  DEVELOPMENT.md  DJANGO-CHANGES.txt  FRONTEND.md  I18N.md  INSTALL-APACHE.md  LOCALIZATION-HACKING.md  PACKAGE-TWEAKS.md  README.md  SCREENSHOT_USAGE.MD  TESTBED.md  conf.py  contact.rst  faq.rst  index.rst  requirements.txt  screenshot.py  screenshots.md
javascript_build/: deamdify.js
ka-lite-data-backup/: find-data-backups-here
kalite/: __init__.py  __main__.py  cli.py  createshortcut.vbs  cronserver.py  cronstart.bat  cronstart.sh  cronstart.vbs  cronstop.bat  cronstop.sh  custommiddle.py  donotrunatboot.sh  example_environment.py  graph_models.sh  ka-lite.wsgi  kalitectl.py  local_settings.py  manage.py  router.py  runatboot.sh  runhidden.vbs  scheduler.py  serverstart.bat  serverstart.sh  serverstart.vbs  serverstop.py  serverstop.sh  settings.py  settingshelper.py  urls.py  urls.txt  version.py  version.yaml
migrations/: 0003_auto__add_facilitygroup__add_field_facilityuser_group.py  (+2 more)
(+3457 files in other folders)
