# Wheel issue with data files.
# https://bitbucket.org/pypa/wheel/issue/92/bdist_wheel-makes-absolute-data_files
# [bdist_wheel]
# universal = 1

[metadata]
description-file = README.md

# This is the one we use officially
[pep8]
ignore = E226,E302,E41,E402
max-line-length = 160
exclude = kalite/*/migrations/*

# Using flake8 is also supported..
[flake8]
# E124: closing bracket does not match indentation
# E702: semicolon at end of line; ignored because we have `from django.conf import settings; logging = settings.LOG` lines and others
# The others have been added for expedience, since large portions of the codebase are not compliant
# It's a future project to remove these ignore directives and fix the resulting linting errors.
ignore = E702,E124,F403,E402,E231,E225,E703,E712,F811,F401,F841,E122,E126,E127,W503,E502,E266,E125
max-line-length = 160
exclude = perseus*,migrations*,legacy*,store*,student_testing*

